--- a/templates/includes/topbar/user_menu.html
+++ b/templates/includes/topbar/user_menu.html
@@ -54,7 +54,7 @@
         
         <!-- Profile Section -->
         <li>
-            <a class="dropdown-item" href="/business/{{ request.tenant.slug }}/profile/">
+            <a class="dropdown-item" href="/auth/profile/">
                 <i class="fas fa-user"></i>
                 <span>My Profile</span>
             </a>
