--- a/templates/includes/topbar/user_menu.html
+++ b/templates/includes/topbar/user_menu.html
@@ -62,21 +62,28 @@
         
         <!-- Personal Actions -->
         <li>
-            <a class="dropdown-item" href="/business/{{ request.tenant.slug }}/employees/attendance/my/">
+            <a class="dropdown-item" href="{% url 'employees:attendance' %}">
                 <i class="fas fa-clock"></i>
                 <span>My Attendance</span>
             </a>
         </li>
         
         <li>
-            <a class="dropdown-item" href="/business/{{ request.tenant.slug }}/employees/leave/request/">
+            <a class="dropdown-item" href="{% url 'employees:leave_request' %}">
                 <i class="fas fa-calendar-plus"></i>
                 <span>Request Leave</span>
             </a>
         </li>
         
         <li>
-            <a class="dropdown-item" href="/business/{{ request.tenant.slug }}/notifications/">
+            <a class="dropdown-item" href="{% url 'employees:leave_list' %}">
+                <i class="fas fa-calendar-alt"></i>
+                <span>My Leave History</span>
+            </a>
+        </li>
+        
+        <li>
+            <a class="dropdown-item" href="{% url 'notification:list' %}">
                 <i class="fas fa-bell"></i>
                 <span>Notifications</span>
                 {% if unread_notifications_count > 0 %}
@@ -92,13 +99,13 @@
                 <small class="text-uppercase">Business Management</small>
             </li>
             <li>
-                <a class="dropdown-item" href="/business/{{ request.tenant.slug }}/business/settings/business/">
+                <a class="dropdown-item" href="{% url 'businesses:settings' %}">
                     <i class="fas fa-cog"></i>
                     <span>Business Settings</span>
                 </a>
             </li>
             <li>
-                <a class="dropdown-item" href="/business/{{ request.tenant.slug }}/reports/">
+                <a class="dropdown-item" href="{% url 'reports:dashboard' %}">
                     <i class="fas fa-chart-bar"></i>
                     <span>Reports & Analytics</span>
                 </a>
