Sidebar Updates for payment

--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -489,14 +489,6 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link {% if request.resolver_match.url_name == 'process' %}active{% endif %}" 
-                               href="/business/{{ request.tenant.slug }}/payments/process/">
-                                <i class="nav-icon fas fa-credit-card"></i>
-                                <span class="nav-text">Process Payment</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
                             <a class="nav-link {% if request.resolver_match.url_name == 'methods' and 'payments' in request.resolver_match.namespace %}active{% endif %}" 
                                href="/business/{{ request.tenant.slug }}/payments/methods/">
                                 <i class="nav-icon fas fa-credit-card"></i>
@@ -504,11 +496,45 @@
                             </a>
                         </li>
                         
+                        <li class="nav-divider">
+                            <span class="nav-divider-text">Management</span>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'reconciliation' and 'payments' in request.resolver_match.namespace %}active{% endif %}" 
+                               href="/business/{{ request.tenant.slug }}/payments/reconciliation/">
+                                <i class="nav-icon fas fa-balance-scale"></i>
+                                <span class="nav-text">Reconciliation</span>
+                            </a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'settings' and 'payments' in request.resolver_match.namespace %}active{% endif %}" 
+                               href="/business/{{ request.tenant.slug }}/payments/settings/">
+                                <i class="nav-icon fas fa-cog"></i>
+                                <span class="nav-text">Payment Settings</span>
+                            </a>
+                        </li>
+                        
+                        <li class="nav-divider">
+                            <span class="nav-divider-text">Reports & Export</span>
+                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link {% if request.resolver_match.url_name == 'reports' and 'payments' in request.resolver_match.namespace %}active{% endif %}" 
                                href="/business/{{ request.tenant.slug }}/payments/reports/">
                                 <i class="nav-icon fas fa-chart-bar"></i>
                                 <span class="nav-text">Reports</span>
+                            </a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" 
+                               href="/business/{{ request.tenant.slug }}/payments/export/" 
+                               target="_blank">
+                                <i class="nav-icon fas fa-download"></i>
+                                <span class="nav-text">Export Data</span>
+                                <i class="nav-badge nav-badge-info">CSV</i>
                             </a>
                         </li>
                     </ul>
