--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -23,6 +23,7 @@
     
     <!-- Main CSS -->
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
+    <link href="{% static 'css/sidebar.css' %}" rel="stylesheet">
     <link href="{% static 'css/auth.css' %}" rel="stylesheet">
     <link href="{% static 'css/components.css' %}" rel="stylesheet">
     
